@@ -34,6 +34,34 @@
 
 WFMath::MTRand WFMath::MTRand::instance;
 
+static WFMath::MTRand::uint32 hash( time_t t, clock_t c )
+{
+	// Get a uint32 from t and c
+	// Better than uint32(x) in case x is floating point in [0,1]
+	// Based on code by Lawrence Kirby (fred@genesis.demon.co.uk)
+
+        typedef WFMath::MTRand::uint32 uint32;
+
+	// guarantee time-based seeds will change
+	static uint32 differ = 0;
+
+	uint32 h1 = 0;
+	unsigned char *p = (unsigned char *) &t;
+	for( size_t i = 0; i < sizeof(t); ++i )
+	{
+		h1 *= UCHAR_MAX + 2U;
+		h1 += p[i];
+	}
+	uint32 h2 = 0;
+	p = (unsigned char *) &c;
+	for( size_t j = 0; j < sizeof(c); ++j )
+	{
+		h2 *= UCHAR_MAX + 2U;
+		h2 += p[j];
+	}
+	return ( h1 + differ++ ) ^ h2;
+}
+
 void WFMath::MTRand::seed()
 {
 	// Seed the generator with an array from /dev/urandom if available
