@@ -1,3 +1,9 @@
+Monday, August 25nd, 2003   Ron Steinke <rsteinke@w-link.net>
+
+	* Moved hash() function out of MersenneTwister.h to
+	  randgen.cpp, to get time_t and clock_t out of the
+	  header.
+
 Friday, August 22nd, 2003   Ron Steinke <rsteinke@w-link.net>
 
 	* Forgot to make deprecated IRand(), Drand() (which
